--- a/src/sass/layouts/leyout_000/_hero.scss
+++ b/src/sass/layouts/leyout_000/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   position: relative;
   background-image: url('../img/hero-bg.png');
-  background-position: center center;
+  background-position: bottom center;
   background-repeat: no-repeat;
   background-size: cover;
 
