Testimonials section done

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -6,6 +6,8 @@ $white: #fff;
 $blue-white: #F2F7FF;
 $purple-white: #F1E4FF;
 $light-gray: #D9DBE1;
+$gray: #969BAB;
+$lightest-blue: #D5FAFC;
 $light-blue: #75E3EA;
 $blue: #2EC5CE;
 $light-purple: #D6B1FF;
