Stats section done

--- a/src/sass/layouts/leyout_000/_features.scss
+++ b/src/sass/layouts/leyout_000/_features.scss
@@ -4,6 +4,10 @@
   .wrapper {
     margin: 0 auto 48px auto;
     text-align: center;
+
+    &:first-of-type {
+      margin-right: auto;
+    }
   }
 
   .heading {
