--- a/src/sass/layouts/layout_1200/_animation.scss
+++ b/src/sass/layouts/layout_1200/_animation.scss
@@ -2,12 +2,8 @@
   opacity: 0;
   position: relative;
   top: -50px;
-  transition: all .75s ease;
-  transition-delay: .2s;
-
-  &_delayed {
-    transition-delay: .4s;
-  }
+  transition: all 0.75s ease;
+  transition-delay: 0.2s;
 }
 
 .faded-in {
