--- a/src/sass/layouts/leyout_000/_general.scss
+++ b/src/sass/layouts/leyout_000/_general.scss
@@ -68,3 +68,55 @@ p {
     margin-bottom: 32px;
   }
 }
+
+.phone {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 360px;
+  height: auto;
+  aspect-ratio: 1/2;
+  filter: drop-shadow(10px 14px 14px rgba(41, 41, 42, 0.5));
+  z-index: 4;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    background-image: url('../img/iphone.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+.link-button {
+  position: relative;
+  padding-right: 33px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  color: $purple;
+  text-decoration: none;
+
+  &::after {
+    content: url('../img/arrow.svg');
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%) rotate(0);
+    transition: transform 0.25s ease;
+  }
+
+  &:hover,
+  &:focus {
+    &::after {
+      transform: translateY(-50%) rotate(-180deg);
+    }
+  }
+}
