--- a/src/sass/layouts/layout_992/_index.scss
+++ b/src/sass/layouts/layout_992/_index.scss
@@ -2,6 +2,7 @@
 @import 'header';
 @import 'menu-button';
 @import 'hero';
+@import 'features';
 @import 'testimonials';
 @import 'img-text';
 @import 'text-section';
