--- a/src/sass/layouts/leyout_000/_hero.scss
+++ b/src/sass/layouts/leyout_000/_hero.scss
@@ -53,10 +53,14 @@
 
   .phone {
     position: absolute;
-    top: 57%;
+    top: 50%;
     right: 29px;
     transform: translateY(-50%);
     display: none;
     width: 320px;
+
+    &.faded-in {
+      top: 57%;
+    }
   }
 }
