--- a/src/sass/layouts/leyout_000/_header.scss
+++ b/src/sass/layouts/leyout_000/_header.scss
@@ -34,8 +34,8 @@
 }
 
 .logo-link {
-  display: flex;
   z-index: 3;
+  display: flex;
   margin-right: 32px;
 }
 
@@ -43,12 +43,12 @@
   position: fixed;
   top: 0;
   left: 100%;
+  z-index: 2;
   width: 100%;
   min-height: 100vh;
   padding: 100px 15px 30px 15px;
   background-color: $blue-white;
-  transition: left .2s ease;
-  z-index: 2;
+  transition: left 0.2s ease;
 }
 
 .main-menu {
@@ -70,7 +70,7 @@
     font-size: 24px;
     color: $brown;
     text-decoration: none;
-    transition: color .25s ease;
+    transition: color 0.25s ease;
 
     &:hover,
     &:focus {
