--- a/src/sass/layouts/leyout_000/_hero.scss
+++ b/src/sass/layouts/leyout_000/_hero.scss
@@ -11,21 +11,21 @@
   }
 
   .text-wrapper {
-    max-width: 730px;
-    padding-right: 15px;
     position: absolute;
     top: 45%;
-    transform: translateY(-50%);
     z-index: 4;
+    max-width: 730px;
+    padding-right: 15px;
+    transform: translateY(-50%);
   }
 
   h3 {
+    margin-bottom: 32px;
     font-style: normal;
     font-weight: 800;
     font-size: 45px;
     line-height: 136%;
     color: $brown;
-    margin-bottom: 32px;
   }
 
   &__button {
@@ -42,12 +42,12 @@
     color: $white;
     font-weight: 700;
     font-size: 20px;
-    transition: all .25s ease;
+    transition: background-color 0.25s ease;
     cursor: pointer;
 
     &:hover,
     &:focus {
-      box-shadow: inset 0 -80px 0 0 $blue;
+      background-color: $blue;
     }
   }
 
