--- a/src/sass/layouts/leyout_000/_menu-button.scss
+++ b/src/sass/layouts/leyout_000/_menu-button.scss
@@ -1,15 +1,15 @@
 .menu-button {
+  position: relative;
+  z-index: 4;
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 69px;
   height: 69px;
   padding: 21px 17px;
-  background-color: transparent;
   border: none;
+  background-color: transparent;
   cursor: pointer;
-  position: relative;
-  z-index: 4;
 
   &__item,
   &__item::before,
@@ -23,7 +23,7 @@
   &__item {
     position: relative;
     transition: all;
-    transition-delay: .15s;
+    transition-delay: 0.15s;
 
     &::before,
     &::after {
@@ -34,13 +34,13 @@
 
     &::before {
       top: -12px;
-      transition: transform .15s ease, top .15s ease .15s;
+      transition: transform 0.15s ease, top 0.15s ease 0.15s;
 
     }
 
     &::after {
       bottom: -12px;
-      transition: transform .15s ease, bottom .15s ease .15s;
+      transition: transform 0.15s ease, bottom 0.15s ease 0.15s;
     }
   }
 }
@@ -54,18 +54,18 @@
   .menu-button__item {
     background-color: transparent;
     transition: all;
-    transition-delay: .15s;
+    transition-delay: 0.15s;
 
     &::before {
       top: 0;
       transform: rotate(45deg);
-      transition: top .15s ease, transform .15s ease .15s;
+      transition: top 0.15s ease, transform 0.15s ease 0.15s;
     }
 
     &::after {
       bottom: 0;
       transform: rotate(-45deg);
-      transition: bottom .15s ease, transform .15s ease .15s;
+      transition: bottom 0.15s ease, transform 0.15s ease 0.15s;
     }
   }
 }
